integrated with kafka